[gd_scene load_steps=12 format=3 uid="uid://cpbqc3ej7wnf5"]

[ext_resource type="Script" path="res://Animations/VFX/projectile_2.gd" id="1_c5g0j"]
[ext_resource type="Texture2D" uid="uid://jmorwrplsbd3" path="res://Animations/VFX/VFX_PNGs/ProjectileSpriteSheet.png" id="2_3jqm8"]

[sub_resource type="Animation" id="Animation_lhonu"]
resource_name = "Proj_Anim1"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_yddi3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07s0u"]
_data = {
"Proj_Anim1": SubResource("Animation_lhonu"),
"RESET": SubResource("Animation_yddi3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3pr15"]
animation = &"Proj_Anim1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kw6o5"]
animation = &"Proj_Anim1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rhfou"]
animation = &"Proj_Anim1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hx20a"]
animation = &"Proj_Anim1"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_aovbm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3pr15")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_kw6o5")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_rhfou")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_hx20a")
blend_point_3/pos = Vector2(-1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_ldcv1"]
radius = 68.0294

[node name="Projectile_2" type="CharacterBody2D" groups=["enemy_projectile"]]
collision_layer = 1024
collision_mask = 0
script = ExtResource("1_c5g0j")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_3jqm8")
offset = Vector2(2.5, 3.5)
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_07s0u")
}

[node name="Projectile_AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Sprite2D")
tree_root = SubResource("AnimationNodeBlendSpace2D_aovbm")
anim_player = NodePath("../AnimationPlayer")
parameters/blend_position = Vector2(0, 0)

[node name="ProjColl" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
shape = SubResource("CircleShape2D_ldcv1")

[node name="BulletLifeTime" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="ProjColl" type="CollisionShape2D" parent="Area2D"]
visible = false
scale = Vector2(0.2, 0.2)
shape = SubResource("CircleShape2D_ldcv1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
